replace abandoned isomorphic-fetch with fetch-everywhere

--- a/testrunner.html
+++ b/testrunner.html
@@ -16,7 +16,7 @@
     var globalImports = {
         chai: window.chai,
         moch: window.mocha,
-        'isomorphic-fetch': window.fetch,
+        'fetch-everywhere': window.fetch,
         eventsource: EventSource
     };
     
