Add support for managing cookies

--- a/testrunner.html
+++ b/testrunner.html
@@ -55,6 +55,7 @@
 
     <script src="tests/client.spec.js"></script>
     <script src="tests/serverevents.spec.js"></script>
+    <script src="tests/utils.spec.js"></script>
 
     <!-- load your test files here -->
 
