--- a/testrunner.html
+++ b/testrunner.html
@@ -54,6 +54,7 @@
     <!-- load code you want to test here -->
 
     <script src="tests/client.spec.js"></script>
+    <script src="tests/client.auth.spec.js"></script>
     <script src="tests/serverevents.spec.js"></script>
     <script src="tests/utils.spec.js"></script>
 
