add fixes for MS Edge

--- a/testrunner.html
+++ b/testrunner.html
@@ -17,7 +17,7 @@
         chai: window.chai,
         moch: window.mocha,
         'fetch-everywhere': window.fetch,
-        eventsource: EventSource
+        eventsource: window.EventSource
     };
     
     //require shim
