comment out browser test runner (no longer works0

--- a/testrunner.html
+++ b/testrunner.html
@@ -53,10 +53,10 @@
 
     <!-- load code you want to test here -->
 
-    <script src="tests/client.spec.js"></script>
-    <script src="tests/client.auth.spec.js"></script>
-    <script src="tests/serverevents.spec.js"></script>
-    <script src="tests/utils.spec.js"></script>
+    <script src="test/client.spec.js"></script>
+    <script src="test/client.auth.spec.js"></script>
+    <script src="test/serverevents.spec.js"></script>
+    <script src="test/utils.spec.js"></script>
 
     <!-- load your test files here -->
 
